--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
     <header>
         <div class="logo">
-            <p>Wab Tech AI</p>
+            <img src="https://example.com/WabTech_AI_Logo.png" alt="Wab Tech AI Logo">
+            <p>Pioneering Ethical AI for a Transformed Africa</p>
+            <p>Intelligent Solutions & Empowering Knowledge for All</p>
         </div>
     </header>
 
@@ -19,7 +21,7 @@
             <h1>Igniting Africa's Future with Intelligent AI</h1>
             <p>Wab Tech AI: Pioneering ethical solutions, empowering knowledge, and transforming every facet of life and industry.</p>
             <div class="hero-buttons">
-                <a href="#education-niche" class="btn btn-primary">Explore Our Education Solutions</a>
+                <a href="#" class="btn btn-primary">Explore Our AI Solutions</a>
                 <a href="#" class="btn btn-secondary">Empower Your AI Knowledge</a>
             </div>
         </div>
@@ -37,47 +39,35 @@
             </div>
         </div>
     </section>
-    
-    <section id="education-niche" class="education-niche">
-        <div class="education-header">
-            <img src="http://googleusercontent.com/image_collection/image_retrieval/16566935275601914556_2" alt="African students learning with AI" class="header-image">
-            <div class="header-text">
-                <h2>How AI is Reshaping Education in Africa</h2>
-                <p>AI is more than a tool; it's a transformative force for education. It promises personalized learning experiences, empowers teachers to focus on mentorship, and expands access to quality education for millions. At Wab Tech AI, we are committed to making this future a reality.</p>
-            </div>
-        </div>
-        
-        <div class="education-intro container">
-            <h3>Your Journey into AI Starts with the Wab Tech AI Academy</h3>
-            <p>While the opportunities are vast, the right skills are essential. Our academy offers practical, hands-on training for everyone, ensuring you are prepared to thrive in an AI-driven world.</p>
-        </div>
 
-        <div class="academy-programs container">
-            <div class="program-card">
-                <img src="http://googleusercontent.com/image_collection/image_retrieval/15799388664994287270_0" alt="Person using AI tools" class="program-image">
-                <div class="program-content">
-                    <h3>Prompt Engineering for Everyone</h3>
-                    <p class="price">KES 5,000 / USD 45</p>
-                    <p>This beginner-friendly training empowers people of all ages and backgrounds to effectively interact with AI tools like ChatGPT, Microsoft Copilot, Canva AI, and more — without any coding required.</p>
-                    <a href="#" class="btn btn-primary">Enroll Now</a>
+    <section class="niches-overview">
+        <div class="container">
+            <h2>Our Niche Expertise</h2>
+            <div class="niche-cards-container">
+                <div class="niche-card">
+                    <h3>WabTech AI freelance: Connect with AI Talent</h3>
+                    <p>WabTech AI freelance is your trusted platform for sourcing skilled AI professionals. We connect businesses and projects with a curated network of African AI experts, ensuring you find the right talent to drive your innovations forward, from machine learning to data science.</p>
+                    <a href="#" class="read-more">Read More</a>
                 </div>
-            </div>
-            <div class="program-card">
-                <img src="http://googleusercontent.com/image_collection/image_retrieval/16020187759335626030_0" alt="Data science and machine learning" class="program-image">
-                <div class="program-content">
-                    <h3>AI, Data Science & ML Courses</h3>
-                    <p class="price">KES 35,000 / USD 300</p>
-                    <p>A comprehensive track designed to teach beginners and intermediate learners practical skills in AI, Data Science, and Machine Learning.</p>
-                    <a href="#" class="btn btn-primary">Get Started</a>
+                <a href="education.html" class="niche-card">
+                    <h3>Education: Transforming Education with AI</h3>
+                    <p>Our educational solutions are designed to modernize learning across Africa. Through the WabTech AI Academy, we provide students, teachers, and professionals with accessible, practical skills and tools to embrace the future of education, fostering a new generation of digital leaders.</p>
+                    <span class="read-more">Read More</span>
+                </a>
+                <div class="niche-card">
+                    <h3>Business: AI Solutions for Your Business</h3>
+                    <p>Empower your enterprise with intelligent solutions that boost efficiency and growth. We offer AI-powered tools for everything from customer support automation and predictive analytics to market research, helping your business stay competitive and data-driven in a dynamic market.</p>
+                    <a href="#" class="read-more">Read More</a>
                 </div>
-            </div>
-            <div class="program-card">
-                <img src="http://googleusercontent.com/image_collection/image_retrieval/6252552282851316720_0" alt="AI applications in business" class="program-image">
-                <div class="program-content">
-                    <h3>AI Application Workshops & Webinars</h3>
-                    <p class="price">KES 2,500 / USD 20</p>
-                    <p>Focused, sector-specific sessions that build on prompt engineering skills to show how AI tools can be applied in various industries and social impact areas.</p>
-                    <a href="#" class="btn btn-primary">Book a Workshop</a>
+                <div class="niche-card">
+                    <h3>Agriculture: Smarter Farming with AI</h3>
+                    <p>We bring precision agriculture to the forefront of sustainable food production. Our AI-driven tools help farmers optimize crop yields, monitor soil health, predict weather patterns, and manage resources more efficiently, leading to greater productivity and resilience in a changing climate.</p>
+                    <a href="#" class="read-more">Read More</a>
+                </div>
+                <div class="niche-card">
+                    <h3>Climate: Harnessing AI for a Sustainable Planet</h3>
+                    <p>Addressing Africa's most pressing environmental challenges requires a new approach. Our AI solutions provide critical insights for climate monitoring, resource management, and conservation efforts, empowering communities and organizations to build a more sustainable future for all.</p>
+                    <a href="#" class="read-more">Read More</a>
                 </div>
             </div>
         </div>
