--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wab Tech AI</title>
-    <link rel="stylesheet" href="style.css">
+    
 </head>
 <body>
-
-    <header>
+    <link rel="stylesheet" href="assets/css/style.css">
+<header>
         <div class="logo">
             <img src="https://example.com/WabTech_AI_Logo.png" alt="Wab Tech AI Logo">
             <p>Pioneering Ethical AI for a Transformed Africa</p>
