--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wab Tech AI</title>
-    
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <link rel="stylesheet" href="assets/css/style.css">
-<header>
-        <div class="logo">
-            <img src="https://example.com/WabTech_AI_Logo.png" alt="Wab Tech AI Logo">
-            <p>Pioneering Ethical AI for a Transformed Africa</p>
-            <p>Intelligent Solutions & Empowering Knowledge for All</p>
+
+    <header>
+        <div class="logo-text">
+            <h1>WAB TECH AI</h1>
+            <p>Empowering through AI</p>
         </div>
     </header>
 
