--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
             <h2>Our Niche Expertise</h2>
             <div class="niche-cards-container">
                 <div class="niche-card">
-                    <h3>WabTech AI freelance: Connect with AI Talent</h3>
-                    <p>WabTech AI freelance is your trusted platform for sourcing skilled AI professionals. We connect businesses and projects with a curated network of African AI experts, ensuring you find the right talent to drive your innovations forward, from machine learning to data science.</p>
-                    <a href="#" class="read-more">Read More</a>
+                    <h3>WabTech AI Talent Network: Connect with AI Talent</h3>
+                    <p>WabTech AI Talent is your trusted platform for sourcing skilled AI professionals. We connect businesses and projects with a curated network of African AI experts, ensuring you find the right talent to drive your innovations forward, from machine learning to data science.</p>
+                    <a href="wabtech-talentnetwork.html" class="read-more">Read More</a>
                 </div>
                 <a href="education.html" class="niche-card">
                     <h3>Education: Transforming Education with AI</h3>
