--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <div class="niche-card">
                     <h3>Business: AI Solutions for Your Business</h3>
                     <p>Empower your enterprise with intelligent solutions that boost efficiency and growth. We offer AI-powered tools for everything from customer support automation and predictive analytics to market research, helping your business stay competitive and data-driven in a dynamic market.</p>
-                    <a href="#" class="read-more">Read More</a>
+                    <a href="business.html" class="read-more">Read More</a>
                 </div>
                 <div class="niche-card">
                     <h3>Agriculture: Smarter Farming with AI</h3>
