--- a/business.html
+++ b/business.html
@@ -3,170 +3,114 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WabTech AI Solutions</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+    <title>Wab Tech AI Business- Accelerating Business Transformation with AI</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
 
+    <!-- Header -->
     <header>
-        <div class="logo-text">
-            <h1>WAB TECH AI</h1>
-            <p>Empowering through AI</p>
-        </div>
+        <nav>
+            <div class="logo">
+                <a href="index.html">SynapseAI</a>
+            </div>
+            <ul class="nav-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="industries.html">Industries</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="insights.html">Insights</a></li>
+            </ul>
+            <div class="burger">
+                <div class="line1"></div>
+                <div class="line2"></div>
+                <div class="line3"></div>
+            </div>
+        </nav>
     </header>
 
-    <section class="hero">
+    <!-- Homepage -->
+    <section id="hero">
         <div class="hero-content">
-            <h1>WabTech AI Solutions</h1>
-            <p>Smart. Simple. Scalable AI for Business Growth</p>
+            <h2>Drive Unprecedented Growth with AI-Powered Solutions</h2>
+            <p>WabTech AI empowers your organization to harness the transformative potential of Artificial Intelligence. From strategic consulting to custom implementation, we deliver measurable results and a competitive edge.</p>
+            <a href="#contact" class="cta-button">Request a Complimentary AI Strategy Assessment</a>
+        </div>
+        <div class="hero-image">
+            <img src="images/hero-image.jpg" alt="AI-Powered Solutions">
         </div>
     </section>
 
-    <section class="vision-mission">
-        <div class="container">
-            <div class="section-card">
-                <h2>🏁 Welcome to WabTech AI</h2>
-                <p>At WabTech AI, we help businesses — from agile startups to large enterprises — harness the power of Artificial Intelligence to:</p>
-                <ul>
-                    <li>Save time</li>
-                    <li>Reduce operational costs</li>
-                    <li>Accelerate business growth</li>
-                </ul>
-                <p>Whether you're a small business owner looking to automate tasks, or a corporate leader aiming for full-scale AI integration — we design, build, and deliver tailored AI solutions that work for you.</p>
-            </div>
+    <section id="about">
+        <div class="about-content">
+            <h2>About SynapseAI</h2>
+            <p>WabTech AI is a leading provider of AI solutions for businesses seeking to optimize operations, enhance customer experiences, and drive revenue growth. Our team of experts combines deep industry knowledge with cutting-edge AI technology to deliver tailored solutions that meet your unique business needs.</p>
+            <a href="about.html" class="learn-more">Learn More</a>
+        </div>
+        <div class="about-image">
+            <img src="images/team-photo.jpg" alt="SynapseAI Team">
         </div>
     </section>
 
-    <section class="niches-overview">
-        <div class="container">
-            <h2>🧠 What We Offer</h2>
-            <div class="section-card">
-                <h3>✅ 1. AI Tool Development</h3>
-                <p>We build and customize intelligent tools to simplify your daily operations.</p>
-                <ul>
-                    <li>Email & customer support assistants</li>
-                    <li>AI-powered report writers</li>
-                    <li>Sales follow-up bots</li>
-                    <li>Internal knowledge base bots</li>
-                </ul>
-                <p>> Example: An AI assistant that replies to leads, summarizes emails, and updates your CRM automatically.</p>
+    <section id="services">
+        <h2>Our Core Capabilities</h2>
+        <div class="services-grid">
+            <div class="service-item">
+                <i class="fas fa-lightbulb fa-3x"></i>
+                <h3>AI Strategy Consulting</h3>
+                <p>Aligning AI with Your Business Goals</p>
             </div>
-            <div class="section-card">
-                <h3>✅ 2. AI Integration for Business Operations</h3>
-                <p>We connect and integrate AI tools with your existing systems — with or without code — to automate:</p>
-                <ul>
-                    <li>📣 Marketing (content creation, advertising, email campaigns)</li>
-                    <li>👥 HR (recruitment screening, employee onboarding)</li>
-                    <li>💼 Finance (report generation, data analysis)</li>
-                    <li>💬 Customer support (chatbots and virtual agents)</li>
-                </ul>
-                <p>> No tech skills? No problem — we handle the integration for you.</p>
+            <div class="service-item">
+                <i class="fas fa-cogs fa-3x"></i>
+                <h3>AI Implementation Services</h3>
+                <p>Seamless Integration and Deployment</p>
             </div>
-            <div class="section-card">
-                <h3>✅ 3. AI Training & Staff Workshops</h3>
-                <p>We upskill your team so they can confidently work with AI tools.</p>
-                <ul>
-                    <li>In-person and virtual workshops</li>
-                    <li>Industry-specific training (retail, real estate, healthcare, logistics, finance)</li>
-                    <li>Monthly AI update & reskilling programs</li>
-                </ul>
-                <p>> Empower your employees to use AI — instead of hiring costly consultants.</p>
-            </div>
-            <div class="section-card">
-                <h3>✅ 4. AI Workflow Automation (For Corporates)</h3>
-                <p>We analyze your business processes and design custom AI-powered workflows to:</p>
-                <ul>
-                    <li>Automate repetitive work</li>
-                    <li>Accelerate decision-making</li>
-                    <li>Boost team productivity</li>
-                </ul>
-                <p>> From HR to Sales to Customer Service — we help you build scalable AI-driven systems.</p>
-            </div>
-            <div class="section-card">
-                <h3>✅ 5. AI Agents (Your Virtual Employees)</h3>
-                <p>We develop autonomous AI agents that perform real business tasks — like digital employees working 24/7.</p>
-                <ul>
-                    <li>AI sales agents</li>
-                    <li>Virtual personal assistants</li>
-                    <li>Meeting and task summarizers</li>
-                    <li>Automated project follow-up agents</li>
-                </ul>
-                <p>> These agents save you time, reduce costs, and never take sick days.</p>
-            </div>
-            <div class="section-card">
-                <h3>✅ 6. Explainable AI (XAI) for High-Stakes Decisions</h3>
-                <p>For industries that require trust and compliance (like finance, HR, healthcare), we implement Explainable AI models — so your decisions are:</p>
-                <ul>
-                    <li>Transparent</li>
-                    <li>Accountable</li>
-                    <li>Easy to explain to stakeholders or regulators</li>
-                </ul>
-                <p>Use cases include:</p>
-                <ul>
-                    <li>Hiring and performance decisions</li>
-                    <li>Credit scoring and loan risk assessment</li>
-                    <li>Customer profiling and segmentation</li>
-                </ul>
-                <p>> Know why AI made a decision — not just what it decided.</p>
+            <div class="service-item">
+                <i class="fas fa-graduation-cap fa-3x"></i>
+                <h3>AI Enablement Programs</h3>
+                <p>Empowering Your Workforce</p>
             </div>
         </div>
     </section>
 
-    <section class="vision-mission">
-        <div class="container">
-            <h2>🎯 Who We Help</h2>
-            <div class="section-card">
-                <h3>👔 Small Businesses & Startups</h3>
-                <p>We make AI simple, affordable, and accessible.</p>
-                <ul>
-                    <li>AI chatbots for sales and support</li>
-                    <li>Marketing automation with AI tools</li>
-                    <li>AI-powered social media content</li>
-                    <li>No-code dashboards for insights</li>
-                    <li>Personalized training for owners and teams</li>
-                </ul>
-                <p>> Grow your business without growing your headcount.</p>
+    <section id="clients">
+        <h2>Driving ROI for Our Clients</h2>
+        <div class="clients-carousel">
+            <div class="client-item">
+                <img src="images/client-logo-1.png" alt="Client 1">
+                <p>30% Increase in Efficiency</p>
             </div>
-            <div class="section-card">
-                <h3>🏢 Large Companies & Enterprises</h3>
-                <p>We deliver enterprise-grade AI solutions that scale with your organization.</p>
-                <ul>
-                    <li>Full AI integration across departments</li>
-                    <li>AI strategy and digital transformation consulting</li>
-                    <li>Large-scale team training and onboarding</li>
-                    <li>Secure, explainable models for decision-making</li>
-                </ul>
-                <p>> Transform operations. Empower teams. Scale intelligently.</p>
+            <div class="client-item">
+                <img src="images/client-logo-2.png" alt="Client 2">
+                <p>15% Reduction in Costs</p>
             </div>
         </div>
     </section>
 
-    <section class="niches-overview">
-        <div class="container">
-            <h2>💡 Why Choose WabTech AI?</h2>
-            <div class="section-card">
-                <ul>
-                    <li>✅ Affordable and scalable solutions for all business sizes</li>
-                    <li>✅ Simple onboarding — no technical background required</li>
-                    <li>✅ End-to-end support: from idea to deployment and training</li>
-                    <li>✅ Practical, no-fluff AI focused on real business impact</li>
-                    <li>✅ We don’t just build tools — we teach your team to use them</li>
-                </ul>
-            </div>
-        </div>
+    <section id="contact">
+        <h2>Unlock Your AI Advantage</h2>
+        <p>Contact us today to explore how SynapseAI can help you achieve your business objectives with the power of Artificial Intelligence.</p>
+        <form>
+            <input type="text" placeholder="Your Name">
+            <input type="email" placeholder="Your Email">
+            <textarea placeholder="Your Message"></textarea>
+            <button type="submit">Submit</button>
+        </form>
     </section>
 
-    <section class="hero">
-        <div class="hero-content">
-            <h2>Ready to Transform Your Business?</h2>
-            <p>Tell us about your needs, and we'll design a smart AI solution just for you.</p>
-            <a href="#" class="btn btn-primary">Get a Free Consultation</a>
-        </div>
-    </section>
-
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Wab Tech AI. All rights reserved.</p>
+        <div class="footer-content">
+            <p>&copy; 2025 SynapseAI. All rights reserved.</p>
+            <div class="social-links">
+                <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
+                <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
+            </div>
+        </div>
     </footer>
 
+    <script src="script.js"></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
