--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wab Tech AI</title>
+    <title>WabTech AI - Empowering through AI</title>
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
-    <header>
-        <div class="logo-text">
-            <h1>WAB TECH AI</h1>
-            <p>Empowering through AI</p>
+    <header class="catching-header">
+        <div class="logo-container">
+            <img src="assets/images/ai-brain-logo.png" alt="Wab Tech AI Logo" class="ai-logo">
+            <div class="logo-text">
+                <h1>WAB TECH AI</h1>
+                <p>Empowering through AI</p>
+            </div>
         </div>
     </header>
 
@@ -19,13 +22,10 @@
         <div class="hero-content">
             <h1>Igniting Africa's Future with Intelligent AI</h1>
             <p>Wab Tech AI: Pioneering ethical solutions, empowering knowledge, and transforming every facet of life and industry.</p>
-            <div class="hero-buttons">
-                <a href="#" class="btn btn-primary">Explore Our AI Solutions</a>
-                <a href="#" class="btn btn-secondary">Empower Your AI Knowledge</a>
-            </div>
+            <a href="#" class="btn btn-primary">Explore Our AI Solutions</a>
         </div>
     </section>
-
+    
     <section class="vision-mission">
         <div class="container">
             <div class="section-card">
@@ -34,7 +34,16 @@
             </div>
             <div class="section-card">
                 <h2>Our Mission Today</h2>
-                <p>Wab Tech AI is dedicated to creating and deploying cutting-edge, locally-relevant AI innovations and fostering widespread AI literacy, ensuring intelligent technology serves humanity and addresses critical challenges across diverse sectors.</p>
+                <p>Wab Tech AI is dedicated to creating and deploying cutting-edge, locally-relevant AI literacy, ensuring intelligent technology serves humanity and addresses critical challenges across diverse sectors.</p>
+            </div>
+        </div>
+    </section>
+
+    <section class="about-us">
+        <div class="container">
+            <div class="section-card">
+                <h2>About WabTech AI</h2>
+                <p>Wab Tech AI is a pioneering company dedicated to democratizing Artificial Intelligence. We believe in creating a world where AI serves humanity by providing innovative, ethical, and practical solutions across diverse sectors. Our work is focused on empowering individuals, businesses, and communities in Africa to leverage AI for growth, education, and positive social change.</p>
             </div>
         </div>
     </section>
@@ -43,34 +52,46 @@
         <div class="container">
             <h2>Our Niche Expertise</h2>
             <div class="niche-cards-container">
-                <div class="niche-card">
-                    <h3>WabTech AI Talent Network: Connect with AI Talent</h3>
-                    <p>WabTech AI Talent is your trusted platform for sourcing skilled AI professionals. We connect businesses and projects with a curated network of African AI experts, ensuring you find the right talent to drive your innovations forward, from machine learning to data science.</p>
-                    <a href="wabtech-talentnetwork.html" class="read-more">Read More</a>
-                </div>
-                <a href="education.html" class="niche-card">
-                    <h3>Education: Transforming Education with AI</h3>
-                    <p>Our educational solutions are designed to modernize learning across Africa. Through the WabTech AI Academy, we provide students, teachers, and professionals with accessible, practical skills and tools to embrace the future of education, fostering a new generation of digital leaders.</p>
+                <a href="wabtech-talentnetwork.html" class="niche-card">
+                    <h3>WabTech AI Talent Network</h3>
+                    <p>Connect with top AI talent from our vetted network for your projects.</p>
                     <span class="read-more">Read More</span>
                 </a>
-                <div class="niche-card">
+                <a href="education.html" class="niche-card">
+                    <h3>Wab Tech AI Academy</h3>
+                    <p>Our educational solutions are designed to modernize learning and empower all ages.</p>
+                    <span class="read-more">Read More</span>
+                </a>
+                <a href="business.html" class="niche-card">
                     <h3>Business: AI Solutions for Your Business</h3>
-                    <p>Empower your enterprise with intelligent solutions that boost efficiency and growth. We offer AI-powered tools for everything from customer support automation and predictive analytics to market research, helping your business stay competitive and data-driven in a dynamic market.</p>
-                    <a href="business.html" class="read-more">Read More</a>
-                </div>
-                <div class="niche-card">
+                    <p>Empower your enterprise with intelligent solutions that boost efficiency and growth.</p>
+                    <span class="read-more">Read More</span>
+                </a>
+                <a href="#" class="niche-card">
                     <h3>Agriculture: Smarter Farming with AI</h3>
-                    <p>We bring precision agriculture to the forefront of sustainable food production. Our AI-driven tools help farmers optimize crop yields, monitor soil health, predict weather patterns, and manage resources more efficiently, leading to greater productivity and resilience in a changing climate.</p>
-                    <a href="#" class="read-more">Read More</a>
-                </div>
-                <div class="niche-card">
+                    <p>We bring precision agriculture to the forefront of sustainable food production.</p>
+                    <span class="read-more">Read More</span>
+                </a>
+                <a href="#" class="niche-card">
                     <h3>Climate: Harnessing AI for a Sustainable Planet</h3>
-                    <p>Addressing Africa's most pressing environmental challenges requires a new approach. Our AI solutions provide critical insights for climate monitoring, resource management, and conservation efforts, empowering communities and organizations to build a more sustainable future for all.</p>
-                    <a href="#" class="read-more">Read More</a>
-                </div>
+                    <p>We bring a new approach to Africa's most pressing environmental challenges.</p>
+                    <span class="read-more">Read More</span>
+                </a>
             </div>
         </div>
     </section>
+
+    <section class="hero">
+        <div class="hero-content">
+            <h2>Ready to Transform Your Business?</h2>
+            <p>Tell us about your needs, and we'll design a smart AI solution just for you.</p>
+            <a href="#" class="btn btn-primary">Get a Free Consultation</a>
+        </div>
+    </section>
+
+    <footer>
+        <p>&copy; 2025 Wab Tech AI. All rights reserved.</p>
+    </footer>
 
 </body>
 </html>
