--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 
     <header class="catching-header">
-        <div class="logo-container">
-            <img src="assets/images/ai-brain-logo.png" alt="Wab Tech AI Logo" class="ai-logo">
+        <div class="header-content-left">
+            <img src="assets/images/ai-brain-logo.jpg" alt="Wab Tech AI Logo" class="ai-logo">
             <div class="logo-text">
                 <h1>WAB TECH AI</h1>
                 <p>Empowering through AI</p>
