--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header class="catching-header">
         <div class="header-content-left">
-            <img src="../images/ai-brain-logo.jpg" alt="Wab Tech AI Logo" class="ai-logo">
+            <img src="ai-brain-logo.jpg" alt="Wab Tech AI Logo" class="ai-logo">
             <div class="logo-text">
                 <h1>WAB TECH AI</h1>
                 <p>Empowering through AI</p>
