--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 <body>
 
     <header class="catching-header">
-        <div class="header-content-left">
+        <div class="header-content-centre
+            
+            ">
             <img src="ai-brain-logo.jpg" alt="Wab Tech AI Logo" class="ai-logo">
-            <div class="logo-text">
-                <h1>WAB TECH AI</h1>
-                <p>Empowering through AI</p>
-            </div>
-        </div>
-    </header>
+            <div class="logo-text"></div>
+
+            
+        </header>
 
     <section class="hero">
         <div class="hero-content">
