--- a/index.html
+++ b/index.html
@@ -9,14 +9,10 @@
 <body>
 
     <header class="catching-header">
-        <div class="header-content-centre
-            
-            ">
-            <img src="ai-brain-logo.jpg" alt="Wab Tech AI Logo" class="ai-logo">
-            <div class="logo-text"></div>
-
-            
-        </header>
+        <div class="header-content-center">
+            <img src="assets/images/ai-brain-logo.jpg" alt="Wab Tech AI Logo" class="ai-logo">
+        </div>
+    </header>
 
     <section class="hero">
         <div class="hero-content">
