--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <header class="catching-header">
         <div class="header-content-center">
-            <img src="assets/images/ai-brain-logo.jpg" alt="Wab Tech AI Logo" class="ai-logo">
+            <img src="ai-brain-logo.jpg" alt="Wab Tech AI Logo" class="ai-logo">
         </div>
     </header>
 
