--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header class="catching-header">
-        <div class="header-content-center">
+        <div class="header-content-left">
             <img src="ai-brain-logo.jpg" alt="Wab Tech AI Logo" class="ai-logo">
         </div>
     </header>
