--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="#" class="btn btn-primary">Explore Our AI Solutions</a>
         </div>
     </section>
-    
+
     <section class="vision-mission">
         <div class="container">
             <div class="section-card">
@@ -91,3 +91,4 @@
 
 </body>
 </html>
+Editing Wab-tech-Ai-/index.html at main · burk2/Wab-tech-Ai- 
