--- a/business.html
+++ b/business.html
@@ -3,114 +3,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wab Tech AI Business- Accelerating Business Transformation with AI</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <title>WabTech AI - Business Solutions</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
 
-    <!-- Header -->
-    <header>
-        <nav>
-            <div class="logo">
-                <a href="index.html">SynapseAI</a>
-            </div>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="services.html">Services</a></li>
-                <li><a href="industries.html">Industries</a></li>
-                <li><a href="about.html">About Us</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="insights.html">Insights</a></li>
-            </ul>
-            <div class="burger">
-                <div class="line1"></div>
-                <div class="line2"></div>
-                <div class="line3"></div>
-            </div>
-        </nav>
+    <header class="catching-header">
+        <div class="header-content-left">
+            <img src="assets/images/ai-brain-logo.jpg" alt="Wab Tech AI Logo" class="ai-logo">
+        </div>
     </header>
 
-    <!-- Homepage -->
-    <section id="hero">
-        <div class="hero-content">
-            <h2>Drive Unprecedented Growth with AI-Powered Solutions</h2>
-            <p>WabTech AI empowers your organization to harness the transformative potential of Artificial Intelligence. From strategic consulting to custom implementation, we deliver measurable results and a competitive edge.</p>
-            <a href="#contact" class="cta-button">Request a Complimentary AI Strategy Assessment</a>
-        </div>
-        <div class="hero-image">
-            <img src="images/hero-image.jpg" alt="AI-Powered Solutions">
-        </div>
-    </section>
-
-    <section id="about">
-        <div class="about-content">
-            <h2>About SynapseAI</h2>
-            <p>WabTech AI is a leading provider of AI solutions for businesses seeking to optimize operations, enhance customer experiences, and drive revenue growth. Our team of experts combines deep industry knowledge with cutting-edge AI technology to deliver tailored solutions that meet your unique business needs.</p>
-            <a href="about.html" class="learn-more">Learn More</a>
-        </div>
-        <div class="about-image">
-            <img src="images/team-photo.jpg" alt="SynapseAI Team">
-        </div>
-    </section>
-
-    <section id="services">
-        <h2>Our Core Capabilities</h2>
-        <div class="services-grid">
-            <div class="service-item">
-                <i class="fas fa-lightbulb fa-3x"></i>
-                <h3>AI Strategy Consulting</h3>
-                <p>Aligning AI with Your Business Goals</p>
+    <main>
+        <section class="business-hero" style="background-image: url('assets/images/circuit-head.jpg');">
+            <div class="container">
+                <h1>Artificial Intelligence<br>in Business (AI)</h1>
             </div>
-            <div class="service-item">
-                <i class="fas fa-cogs fa-3x"></i>
-                <h3>AI Implementation Services</h3>
-                <p>Seamless Integration and Deployment</p>
-            </div>
-            <div class="service-item">
-                <i class="fas fa-graduation-cap fa-3x"></i>
-                <h3>AI Enablement Programs</h3>
-                <p>Empowering Your Workforce</p>
-            </div>
-        </div>
-    </section>
+        </section>
 
-    <section id="clients">
-        <h2>Driving ROI for Our Clients</h2>
-        <div class="clients-carousel">
-            <div class="client-item">
-                <img src="images/client-logo-1.png" alt="Client 1">
-                <p>30% Increase in Efficiency</p>
+        <section class="services-tabs-section">
+            <div class="container">
+                <div class="service-tabs-grid">
+                    <div class="service-tab">
+                        <h3>Custom AI Solutions</h3>
+                        <p>We build bespoke AI models to solve your unique business challenges, from predictive analytics to natural language processing.</p>
+                    </div>
+                    <div class="service-tab">
+                        <h3>AI Strategy Consulting</h3>
+                        <p>Our experts help you identify opportunities to integrate AI, develop a clear roadmap, and ensure a smooth implementation process.</p>
+                    </div>
+                    <div class="service-tab">
+                        <h3>Machine Learning Services</h3>
+                        <p>Leverage the power of data with our machine learning services, including data modeling, algorithm training, and optimization.</p>
+                    </div>
+                    <div class="service-tab">
+                        <h3>AI Automation</h3>
+                        <p>Automate repetitive tasks, streamline workflows, and improve operational efficiency with our intelligent automation solutions.</p>
+                    </div>
+                    <div class="service-tab">
+                        <h3>Data Analytics & Insights</h3>
+                        <p>Turn your raw data into actionable insights with our AI-driven data analytics services, helping you make smarter business decisions.</p>
+                    </div>
+                    <div class="service-tab">
+                        <h3>Customer Experience AI</h3>
+                        <p>Enhance customer interactions with AI-powered chatbots, personalized recommendations, and sentiment analysis tools.</p>
+                    </div>
+                </div>
             </div>
-            <div class="client-item">
-                <img src="images/client-logo-2.png" alt="Client 2">
-                <p>15% Reduction in Costs</p>
+        </section>
+        
+        <section class="contact-form">
+            <div class="container">
+                <h2>Contact Us</h2>
+                <form>
+                    <input type="text" placeholder="Your Name" required />
+                    <input type="email" placeholder="Your Email" required />
+                    <textarea placeholder="Your Message" rows="5" required></textarea>
+                    <button type="submit" class="btn btn-primary">Send Message</button>
+                </form>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
 
-    <section id="contact">
-        <h2>Unlock Your AI Advantage</h2>
-        <p>Contact us today to explore how SynapseAI can help you achieve your business objectives with the power of Artificial Intelligence.</p>
-        <form>
-            <input type="text" placeholder="Your Name">
-            <input type="email" placeholder="Your Email">
-            <textarea placeholder="Your Message"></textarea>
-            <button type="submit">Submit</button>
-        </form>
-    </section>
-
-    <!-- Footer -->
     <footer>
-        <div class="footer-content">
-            <p>&copy; 2025 SynapseAI. All rights reserved.</p>
-            <div class="social-links">
-                <a href="#"><i class="fab fa-linkedin fa-2x"></i></a>
-                <a href="#"><i class="fab fa-twitter fa-2x"></i></a>
-            </div>
-        </div>
+        <p>&copy; 2025 Wab Tech AI. All rights reserved.</p>
     </footer>
 
-    <script src="script.js"></script> <!-- Link to your JavaScript file -->
 </body>
 </html>
