--- a/business.html
+++ b/business.html
@@ -10,12 +10,12 @@
 
     <header class="catching-header">
         <div class="header-content-left">
-            <img src="assets/images/ai-brain-logo.jpg" alt="Wab Tech AI Logo" class="ai-logo">
+            <img src="assetsimages/ai-brain-logo.jpg" alt="Wab Tech AI Logo" class="ai-logo">
         </div>
     </header>
 
     <main>
-        <section class="business-hero" style="background-image: url('assets/images/circuit-head.jpg');">
+        <section class="business-hero" style="background-image: url('images/circuit-head.jpg');">
             <div class="container">
                 <h1>Artificial Intelligence<br>in Business (AI)</h1>
             </div>
