--- a/business.html
+++ b/business.html
@@ -1,73 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WabTech AI - Business Solutions</title>
-    <link rel="stylesheet" href="assets/css/style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Empowering Africa's Businesses</title>
+  <style>
+    body {
+      font-family: 'Segoe UI', sans-serif;
+      margin: 0;
+      background: #f4f6f9;
+      color: #333;
+    }
+    header {
+      background: #0a3d62;
+      color: white;
+      padding: 2rem;
+      text-align: center;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+    }
+    header h2 {
+      margin-top: 0.5rem;
+      font-weight: normal;
+      font-size: 1.2rem;
+    }
+    .section {
+      padding: 2rem;
+      max-width: 1000px;
+      margin: auto;
+    }
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 1.5rem;
+    }
+    .card {
+      background: white;
+      border-radius: 8px;
+      padding: 1.5rem;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+    .card h3 {
+      margin-top: 0;
+      color: #0a3d62;
+    }
+    footer {
+      background: #0a3d62;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+    }
+  </style>
 </head>
 <body>
 
-    <header class="catching-header">
-        <div class="header-content-left">
-            <img src="assetsimages/ai-brain-logo.jpg" alt="Wab Tech AI Logo" class="ai-logo">
-        </div>
-    </header>
+  <header>
+    <h1>Empowering Africa's Businesses Through Ethical, Impactful AI</h1>
+    <h2>WabTech AI Initiative</h2>
+  </header>
 
-    <main>
-        <section class="business-hero" style="background-image: url('images/circuit-head.jpg');">
-            <div class="container">
-                <h1>Artificial Intelligence<br>in Business (AI)</h1>
-            </div>
-        </section>
+  <section class="section">
+    <div class="grid">
+      <div class="card">
+        <h3>AI Readiness & Education</h3>
+        <p>Building foundational understanding and skills for responsible AI adoption across sectors.</p>
+      </div>
+      <div class="card">
+        <h3>Implementation & Innovation</h3>
+        <p>Driving practical AI solutions tailored to local business needs and innovation ecosystems.</p>
+      </div>
+      <div class="card">
+        <h3>Governance & Resilience</h3>
+        <p>Establishing ethical frameworks, compliance systems, and operational integrity for AI deployment.</p>
+      </div>
+      <div class="card">
+        <h3>Social Impact & Inclusion</h3>
+        <p>Ensuring AI benefits reach underserved communities and support inclusive economic growth.</p>
+      </div>
+    </div>
+  </section>
 
-        <section class="services-tabs-section">
-            <div class="container">
-                <div class="service-tabs-grid">
-                    <div class="service-tab">
-                        <h3>Custom AI Solutions</h3>
-                        <p>We build bespoke AI models to solve your unique business challenges, from predictive analytics to natural language processing.</p>
-                    </div>
-                    <div class="service-tab">
-                        <h3>AI Strategy Consulting</h3>
-                        <p>Our experts help you identify opportunities to integrate AI, develop a clear roadmap, and ensure a smooth implementation process.</p>
-                    </div>
-                    <div class="service-tab">
-                        <h3>Machine Learning Services</h3>
-                        <p>Leverage the power of data with our machine learning services, including data modeling, algorithm training, and optimization.</p>
-                    </div>
-                    <div class="service-tab">
-                        <h3>AI Automation</h3>
-                        <p>Automate repetitive tasks, streamline workflows, and improve operational efficiency with our intelligent automation solutions.</p>
-                    </div>
-                    <div class="service-tab">
-                        <h3>Data Analytics & Insights</h3>
-                        <p>Turn your raw data into actionable insights with our AI-driven data analytics services, helping you make smarter business decisions.</p>
-                    </div>
-                    <div class="service-tab">
-                        <h3>Customer Experience AI</h3>
-                        <p>Enhance customer interactions with AI-powered chatbots, personalized recommendations, and sentiment analysis tools.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        
-        <section class="contact-form">
-            <div class="container">
-                <h2>Contact Us</h2>
-                <form>
-                    <input type="text" placeholder="Your Name" required />
-                    <input type="email" placeholder="Your Email" required />
-                    <textarea placeholder="Your Message" rows="5" required></textarea>
-                    <button type="submit" class="btn btn-primary">Send Message</button>
-                </form>
-            </div>
-        </section>
-    </main>
+  <section class="section">
+    <h2>About Us</h2>
+    <p>WabTech AI is proud to empower Africa's businesses through ethical, transparent, and transformative artificial intelligence. We believe in long-term partnerships, operational excellence, and client education as the foundation of responsible AI adoption.</p>
+  </section>
 
-    <footer>
-        <p>&copy; 2025 Wab Tech AI. All rights reserved.</p>
-    </footer>
+  <section class="section">
+    <h2>Contact Us</h2>
+    <p>Interested in collaborating or learning more? Reach out to us to explore how AI can transform your business responsibly.</p>
+  </section>
+
+  <footer>
+    &copy; 2025 WabTech AI. All rights reserved.
+  </footer>
 
 </body>
 </html>
