--- a/business.html
+++ b/business.html
@@ -3,54 +3,85 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Empowering Africa's Businesses</title>
+  <title>WabTech AI | Empowering Africa</title>
   <style>
     body {
+      margin: 0;
       font-family: 'Segoe UI', sans-serif;
-      margin: 0;
-      background: #f4f6f9;
-      color: #333;
+      background-color: #0d0d0d;
+      color: #ffffff;
     }
+
     header {
-      background: #0a3d62;
-      color: white;
-      padding: 2rem;
+      background: linear-gradient(to right, #0d0d0d, #1a1a1a);
       text-align: center;
+      padding: 3rem 1rem;
     }
+
     header h1 {
-      margin: 0;
-      font-size: 2rem;
+      font-size: 2.5rem;
+      margin-bottom: 0.5rem;
+      color: #ffd700;
     }
+
     header h2 {
-      margin-top: 0.5rem;
-      font-weight: normal;
       font-size: 1.2rem;
+      font-weight: normal;
+      color: #cccccc;
     }
+
+    .chip-image {
+      background: url('https://via.placeholder.com/1200x400?text=AI+Chip+Graphic') no-repeat center;
+      background-size: cover;
+      height: 300px;
+      margin-bottom: 2rem;
+    }
+
     .section {
-      padding: 2rem;
       max-width: 1000px;
       margin: auto;
+      padding: 2rem 1rem;
     }
+
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       gap: 1.5rem;
     }
+
     .card {
-      background: white;
-      border-radius: 8px;
+      background-color: #1a1a1a;
+      border-left: 5px solid #ffd700;
       padding: 1.5rem;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(255, 215, 0, 0.2);
     }
+
     .card h3 {
       margin-top: 0;
-      color: #0a3d62;
+      color: #ffd700;
     }
+
+    .card p {
+      color: #dddddd;
+    }
+
+    .section h2 {
+      color: #ffd700;
+      margin-bottom: 1rem;
+    }
+
+    .section p {
+      color: #cccccc;
+      line-height: 1.6;
+    }
+
     footer {
-      background: #0a3d62;
-      color: white;
       text-align: center;
       padding: 1rem;
+      background-color: #1a1a1a;
+      color: #888888;
+      font-size: 0.9rem;
     }
   </style>
 </head>
@@ -60,6 +91,8 @@
     <h1>Empowering Africa's Businesses Through Ethical, Impactful AI</h1>
     <h2>WabTech AI Initiative</h2>
   </header>
+
+  <div class="chip-image"></div>
 
   <section class="section">
     <div class="grid">
