--- a/business.html
+++ b/business.html
@@ -31,10 +31,11 @@
     }
 
     .chip-image {
-      background: url('https://via.placeholder.com/1200x400?text=AI+Chip+Graphic') no-repeat center;
+      background: url('./ai-image.png') no-repeat center;
       background-size: cover;
       height: 300px;
       margin-bottom: 2rem;
+      box-shadow: 0 0 20px rgba(255, 215, 0, 0.3);
     }
 
     .section {
