--- a/business.html
+++ b/business.html
@@ -13,58 +13,53 @@
     }
 
     header {
-      background: linear-gradient(to right, #0d0d0d, #1a1a1a);
       text-align: center;
-      padding: 3rem 1rem;
+      padding: 3rem 1rem 1rem;
     }
 
     header h1 {
       font-size: 2.5rem;
-      margin-bottom: 0.5rem;
       color: #ffd700;
+      margin-bottom: 0.5rem;
     }
 
     header h2 {
       font-size: 1.2rem;
-      font-weight: normal;
       color: #cccccc;
-    }
-
-    .chip-image {
-      background: url('./ai-image.png') no-repeat center;
-      background-size: cover;
-      height: 300px;
-      margin-bottom: 2rem;
-      box-shadow: 0 0 20px rgba(255, 215, 0, 0.3);
-    }
-
-    .section {
-      max-width: 1000px;
-      margin: auto;
-      padding: 2rem 1rem;
+      font-weight: normal;
     }
 
     .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
       gap: 1.5rem;
+      padding: 2rem 1rem;
+      max-width: 1000px;
+      margin: auto;
     }
 
-    .card {
-      background-color: #1a1a1a;
-      border-left: 5px solid #ffd700;
+    .yellow-box {
+      background-color: #ffd700;
+      color: #000000;
       padding: 1.5rem;
       border-radius: 8px;
-      box-shadow: 0 0 10px rgba(255, 215, 0, 0.2);
+      box-shadow: 0 0 10px rgba(255, 215, 0, 0.3);
     }
 
-    .card h3 {
+    .yellow-box h3 {
       margin-top: 0;
-      color: #ffd700;
+      font-size: 1.2rem;
     }
 
-    .card p {
-      color: #dddddd;
+    .yellow-box p {
+      font-size: 0.95rem;
+      line-height: 1.5;
+    }
+
+    .section {
+      max-width: 800px;
+      margin: auto;
+      padding: 2rem 1rem;
     }
 
     .section h2 {
@@ -93,26 +88,22 @@
     <h2>WabTech AI Initiative</h2>
   </header>
 
-  <div class="chip-image"></div>
-
-  <section class="section">
-    <div class="grid">
-      <div class="card">
-        <h3>AI Readiness & Education</h3>
-        <p>Building foundational understanding and skills for responsible AI adoption across sectors.</p>
-      </div>
-      <div class="card">
-        <h3>Implementation & Innovation</h3>
-        <p>Driving practical AI solutions tailored to local business needs and innovation ecosystems.</p>
-      </div>
-      <div class="card">
-        <h3>Governance & Resilience</h3>
-        <p>Establishing ethical frameworks, compliance systems, and operational integrity for AI deployment.</p>
-      </div>
-      <div class="card">
-        <h3>Social Impact & Inclusion</h3>
-        <p>Ensuring AI benefits reach underserved communities and support inclusive economic growth.</p>
-      </div>
+  <section class="grid">
+    <div class="yellow-box">
+      <h3>AI Readiness & Education</h3>
+      <p>Building foundational understanding and skills for responsible AI adoption across sectors.</p>
+    </div>
+    <div class="yellow-box">
+      <h3>Implementation & Innovation</h3>
+      <p>Driving practical AI solutions tailored to local business needs and innovation ecosystems.</p>
+    </div>
+    <div class="yellow-box">
+      <h3>Governance & Resilience</h3>
+      <p>Establishing ethical frameworks, compliance systems, and operational integrity for AI deployment.</p>
+    </div>
+    <div class="yellow-box">
+      <h3>Social Impact & Inclusion</h3>
+      <p>Ensuring AI benefits reach underserved communities and support inclusive economic growth.</p>
     </div>
   </section>
 
