--- a/business.html
+++ b/business.html
@@ -1,125 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>WabTech AI | Empowering Africa</title>
+  <meta charset="UTF-8">
+  <title>WabTech AI – Empowering Africa</title>
   <style>
     body {
       margin: 0;
+      padding: 0;
+      background-image: url('ai-image.png');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-attachment: fixed;
       font-family: 'Segoe UI', sans-serif;
-      background-color: #0d0d0d;
-      color: #ffffff;
+      color: #fff;
     }
 
-    header {
-      text-align: center;
-      padding: 3rem 1rem 1rem;
+    .overlay {
+      background-color: rgba(0, 0, 0, 0.6); /* Dark overlay for readability */
+      padding: 40px;
+      min-height: 100vh;
     }
 
-    header h1 {
-      font-size: 2.5rem;
+    h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+
+    h2 {
+      font-size: 1.5em;
+      margin-top: 30px;
       color: #ffd700;
-      margin-bottom: 0.5rem;
     }
 
-    header h2 {
-      font-size: 1.2rem;
-      color: #cccccc;
-      font-weight: normal;
-    }
-
-    .grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 1.5rem;
-      padding: 2rem 1rem;
-      max-width: 1000px;
-      margin: auto;
-    }
-
-    .yellow-box {
-      background-color: #ffd700;
-      color: #000000;
-      padding: 1.5rem;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(255, 215, 0, 0.3);
-    }
-
-    .yellow-box h3 {
-      margin-top: 0;
-      font-size: 1.2rem;
-    }
-
-    .yellow-box p {
-      font-size: 0.95rem;
-      line-height: 1.5;
+    p {
+      font-size: 1em;
+      line-height: 1.6;
+      max-width: 800px;
     }
 
     .section {
-      max-width: 800px;
-      margin: auto;
-      padding: 2rem 1rem;
-    }
-
-    .section h2 {
-      color: #ffd700;
-      margin-bottom: 1rem;
-    }
-
-    .section p {
-      color: #cccccc;
-      line-height: 1.6;
-    }
-
-    footer {
-      text-align: center;
-      padding: 1rem;
-      background-color: #1a1a1a;
-      color: #888888;
-      font-size: 0.9rem;
+      margin-bottom: 40px;
     }
   </style>
 </head>
 <body>
+  <div class="overlay">
+    <h1>Empowering Africa's businesses through ethical, impactful AI</h1>
+    <h2>LAU</h2>
 
-  <header>
-    <h1>Empowering Africa's Businesses Through Ethical, Impactful AI</h1>
-    <h2>WabTech AI Initiative</h2>
-  </header>
-
-  <section class="grid">
-    <div class="yellow-box">
-      <h3>AI Readiness & Education</h3>
-      <p>Building foundational understanding and skills for responsible AI adoption across sectors.</p>
+    <div class="section">
+      <h2>AI Readiness & Education</h2>
+      <p>Bilteraliatanhanda, cuhent ceceber BIEcen emcone envetoverojes.com base epepicind.gteen</p>
     </div>
-    <div class="yellow-box">
-      <h3>Implementation & Innovation</h3>
-      <p>Driving practical AI solutions tailored to local business needs and innovation ecosystems.</p>
+
+    <div class="section">
+      <h2>Implementation & Innovation</h2>
+      <p>Bolali telathy cucorio'lu theris alef Princes, cerintofentesintisoniam</p>
     </div>
-    <div class="yellow-box">
-      <h3>Governance & Resilience</h3>
-      <p>Establishing ethical frameworks, compliance systems, and operational integrity for AI deployment.</p>
+
+    <div class="section">
+      <h2>Governance & Resigntem</h2>
+      <p>Mootulo. Ioffirmlyistrean enticion sen. har shmesh. honon o thorgermins on</p>
     </div>
-    <div class="yellow-box">
-      <h3>Social Impact & Inclusion</h3>
-      <p>Ensuring AI benefits reach underserved communities and support inclusive economic growth.</p>
+
+    <div class="section">
+      <h2>Social Impact Ategions</h2>
+      <p>Opeeo.toeuescilvel In'uadjique.toerecdats. & w herberdeis os insinies</p>
     </div>
-  </section>
 
-  <section class="section">
-    <h2>About Us</h2>
-    <p>WabTech AI is proud to empower Africa's businesses through ethical, transparent, and transformative artificial intelligence. We believe in long-term partnerships, operational excellence, and client education as the foundation of responsible AI adoption.</p>
-  </section>
+    <div class="section">
+      <h2>About Us</h2>
+      <p>WailIg an AI prous to empower Arlica's businesses through athical, tramgatreni, and fail afformative aththicial mailigance.</p>
+    </div>
 
-  <section class="section">
-    <h2>Contact Us</h2>
-    <p>Interested in collaborating or learning more? Reach out to us to explore how AI can transform your business responsibly.</p>
-  </section>
-
-  <footer>
-    &copy; 2025 WabTech AI. All rights reserved.
-  </footer>
-
+    <div class="section">
+      <h2>Contact Us</h2>
+      <p>Reach out to us for partnerships, consultations, or more information.</p>
+    </div>
+  </div>
 </body>
 </html>
