--- a/business.html
+++ b/business.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>WabTech AI – Empowering Africa</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WabTech AI | Empowering Africa</title>
   <style>
     body {
       margin: 0;
@@ -13,71 +14,137 @@
       background-repeat: no-repeat;
       background-attachment: fixed;
       font-family: 'Segoe UI', sans-serif;
-      color: #fff;
+      color: #ffffff;
     }
 
     .overlay {
-      background-color: rgba(0, 0, 0, 0.6); /* Dark overlay for readability */
-      padding: 40px;
+      background-color: rgba(0, 0, 0, 0.75);
+      padding: 3rem 1rem;
       min-height: 100vh;
     }
 
-    h1 {
-      font-size: 2.5em;
-      margin-bottom: 10px;
+    header {
+      text-align: center;
+      margin-bottom: 2rem;
     }
 
-    h2 {
-      font-size: 1.5em;
-      margin-top: 30px;
+    header h1 {
+      font-size: 2.5rem;
       color: #ffd700;
+      margin-bottom: 0.5rem;
     }
 
-    p {
-      font-size: 1em;
-      line-height: 1.6;
-      max-width: 800px;
+    header h2 {
+      font-size: 1.2rem;
+      color: #cccccc;
+      font-weight: normal;
     }
 
-    .section {
-      margin-bottom: 40px;
+    .grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+      gap: 1.5rem;
+      margin: 2rem auto;
+      max-width: 1200px;
+    }
+
+    .yellow-box {
+      background-color: #ffd700;
+      color: #000000;
+      padding: 1.5rem;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(255, 215, 0, 0.3);
+      transition: transform 0.3s ease;
+    }
+
+    .yellow-box:hover {
+      transform: translateY(-5px);
+    }
+
+    .yellow-box h3 {
+      margin-top: 0;
+      font-size: 1.1rem;
+    }
+
+    .yellow-box p {
+      font-size: 0.95rem;
+      line-height: 1.5;
+    }
+
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background-color: rgba(0, 0, 0, 0.8);
+      color: #888888;
+      font-size: 0.9rem;
     }
   </style>
 </head>
 <body>
   <div class="overlay">
-    <h1>Empowering Africa's businesses through ethical, impactful AI</h1>
-    <h2>LAU</h2>
+    <header>
+      <h1>Empowering Africa's Businesses Through Ethical, Impactful AI</h1>
+      <h2>WabTech AI Initiative</h2>
+    </header>
 
-    <div class="section">
-      <h2>AI Readiness & Education</h2>
-      <p>Bilteraliatanhanda, cuhent ceceber BIEcen emcone envetoverojes.com base epepicind.gteen</p>
-    </div>
+    <section class="grid">
+      <div class="yellow-box">
+        <h3>1. AI Readiness Accelerator</h3>
+        <p>Prepare your organization for the AI era with confidence. We guide you through strategic planning, data audits, and capability mapping—ensuring you have the right foundation for ethical, impactful innovation..</p>
+      </div>
+      <div class="yellow-box">
+        <h3>2. AI Education & Workshops</h3>
+        <p>Jargon-free training to empower teams across industries and skill levels.</p>
+      </div>
+      <div class="yellow-box">
+        <h3>3. Ethical AI Implementation</h3>
+        <p>Deploying solutions with transparency, fairness, and measurable impact.</p>
+      </div>
+      <div class="yellow-box">
+        <h3>4. AI Branding & Storytelling</h3>
+        <p>Design systems and narratives that build trust and communicate innovation.</p>
+      </div>
+      <div class="yellow-box">
+        <h3>5. AI Ethics & Compliance Consulting</h3>
+        <p>Bias audits, privacy safeguards, and alignment with global regulations.</p>
+      </div>
+      <div class="yellow-box">
+        <h3>6. Strategic Partnerships & Ecosystem Building</h3>
+        <p>Connecting innovators and institutions to accelerate shared progress.</p>
+      </div>
+      <div class="yellow-box">
+        <h3>7. Client Dashboard Portal</h3>
+        <p>Real-time metrics, insights, and personalized recommendations.</p>
+      </div>
+      <div class="yellow-box">
+        <h3>8. Case Studies & Impact Reports</h3>
+        <p>Documenting growth stories and transformative outcomes.</p>
+      </div>
+      <div class="yellow-box">
+        <h3>9. Knowledge Hub / Resource Center</h3>
+        <p>Curated tutorials, insights, and thought leadership for ethical AI.</p>
+      </div>
+      <div class="yellow-box">
+        <h3>10. WabTech AI Certification Program</h3>
+        <p>Showcase your commitment to responsible AI innovation.</p>
+      </div>
+      <div class="yellow-box">
+        <h3>11. Client Onboarding System</h3>
+        <p>Fast, personalized, AI-powered onboarding with zero friction.</p>
+      </div>
+      <div class="yellow-box">
+        <h3>12. Internal Culture & Team Development</h3>
+        <p>Training and leadership programs for sustainable, AI-literate growth.</p>
+      </div>
+      <div class="yellow-box">
+        <h3>13. Social Impact Program</h3>
+        <p>AI for education, access, and nonprofit initiatives across Africa.</p>
+      </div>
+    </section>
 
-    <div class="section">
-      <h2>Implementation & Innovation</h2>
-      <p>Bolali telathy cucorio'lu theris alef Princes, cerintofentesintisoniam</p>
-    </div>
-
-    <div class="section">
-      <h2>Governance & Resigntem</h2>
-      <p>Mootulo. Ioffirmlyistrean enticion sen. har shmesh. honon o thorgermins on</p>
-    </div>
-
-    <div class="section">
-      <h2>Social Impact Ategions</h2>
-      <p>Opeeo.toeuescilvel In'uadjique.toerecdats. & w herberdeis os insinies</p>
-    </div>
-
-    <div class="section">
-      <h2>About Us</h2>
-      <p>WailIg an AI prous to empower Arlica's businesses through athical, tramgatreni, and fail afformative aththicial mailigance.</p>
-    </div>
-
-    <div class="section">
-      <h2>Contact Us</h2>
-      <p>Reach out to us for partnerships, consultations, or more information.</p>
-    </div>
+    <footer>
+      &copy; 2025 WabTech AI. All rights reserved.
+    </footer>
   </div>
 </body>
 </html>
